# jarvis

./: .editorconfig  .gitignore  README.md  archclean.py  archlinux.sh  install.sh  pacaur.sh  raid-drive.txt  refind-macbook.txt  vimrc
dotfiles/: notifications-daemon.service  terminator.conf  vimrc
scripts/: archclean.py  archinstall.py  archlinux.sh  beer.py  disks.c  ffmpeg.py  freebox.py  getfile.py  getfileio.py  hsize.py  install.sh  mydu.c  ohmyzsh.sh  re-encode.py  speedometter.py  touchpad.py  webtoons.py  wireguard.py
scripts/archinstall/: README.md  install_cmd.py  install_json.py  requirements.pip  test.py  test_trizen.py  umount.py
scripts/archinstall/arch/: __init__.py  archinstall.py  archuser.py  bootloaders.py  exceptions.py  metapkg.py  mount.py  runner.py  services.py  tools.py
scripts/archinstall/json/: deepin.json  germaine.json  jotunheim.json  kami.json  kyra.json  nginx.json  pepper.json  stark.json  tomtom.json
scripts/archinstall/tests/: fakeai.py  test_cd.py  test_file.py  test_groups.py  test_install.py  test_json.py  test_mount.py  test_packages.py  test_services.py  test_user.py  tools.py
scripts/bwarg/: README.md  bwarg.py  pyproject.toml
scripts/dockerclean/: dockerclean.py  requirements.pip
scripts/eta/: eta.py  requirements.txt
scripts/live-modprober/: Makefile  README.md  live-modprober.py  live-prober.service
scripts/maloread/: README.md  main.py  maloread.py  pyproject.toml  requirements.txt  scroller.css
scripts/mydu/: .gitignore  Makefile  README.md  auteur
scripts/mydu/srcs/: curses.c  curses.h  curses_confirm.c  curses_delete.c  curses_fileinfo.c  curses_files.c  curses_info.c  curses_main.c  curses_window.c  mydu.c  mydu.h  node.c  parser.c  test_unix.c  unix_walk.c
scripts/tools/: perms.py
scripts/webtoons/: README.md  lelscan.py  newtoon.py  nhentai.py  pullall.py  pyproject.toml  requirements.txt  run.sh  toomics.py  toonbase.py  webtoons.py
scripts/webtoons/migrations/: 2022010200.py
scripts/webtoons/providers/: __init__.py  bugplayer.py  lelscan.py  mangaorigin.py  mangaowl.py  mangascan.py  manhuascan.py  manhwa.py  nhentai.py  scan1.py  scantrad.py  tbate.py  toomics.py  webtoons.py  xunscans.py
