[tool.poetry]
name = "bwarg"
version = "0.1.0"
description = "File renamer"
authors = ["Chr0nos <snicolet@student.42.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
