[tool.poetry]
name = "maloread"
version = "1.0.0"
description = "Simple CBZ reader"
authors = ["Sebastien Nicolet <snicolet@student.42.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.1"
PyQt5 = "5.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
