[tool.poetry]
name = "webtoons"
version = "0.1.0"
description = "Webtoons scrappers"
authors = ["Sebastien Nicolet <snicolet@student.42.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.8.2"
click = "^7.0"
lxml = "^4.5.0"
aiofile = "^3.5.0"
asyncio-pool = "^0.5.2"
pydantic = "^1.8.2"
bs4 = "^0.0.1"
Brotli = "^1.0.9"
aiohttp = {extras = ["brotli"], version = "^3.9.0"}
xvfbwrapper = "^0.2.9"
undetected-chromedriver = "^3.1.3"
Pillow = "^10.3.0"
httpx = "^0.23.3"
certifi = "^2023.7.22"
motorized = "^0.6.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
