[tool.poetry]
name = "webtoons"
version = "0.1.0"
description = "Webtoons scrappers"
authors = ["Sebastien Nicolet <snicolet@student.42.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.8.2"
click = "^7.0"
aiofile = "^3.5.0"
asyncio-pool = "^0.5.2"
pydantic = "^1.8.2"
bs4 = "^0.0.1"
Brotli = "^1.0.9"
aiohttp = {extras = ["brotli"], version = "^3.7.4"}
xvfbwrapper = "^0.2.9"
undetected-chromedriver = "^3.1.3"
httpx = "^0.23.3"
certifi = "^2022.12.7"
motorized = "^0.6.7"
rich = "^13.4.2"
typer = "^0.9.0"
cloudscraper = "^1.2.71"
selenium = "^4.21.0"
setuptools = "^70.0.0"
pillow = "^11.1.0"
lxml = "^5.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
